# NOVADownloadManager

./: .agent-state.json  .bot-chats.json  .editorconfig  .env.example  .gitattributes  .gitignore  .notif-last.json  .notif-prefs.json  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INIT_DEV.md  LICENSE  Plan.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  clippy.toml  eslint.config.mjs  index.html  metadata.json  nova-bot.py  nova-bot.py.bak-20260707-175748  nova-bot.service  nova-daily-maintenance.sh  nova-dev-agent.service  nova-dev-agent.sh  nova-maintenance.service  nova-maintenance.timer  nova-watchdog.service  nova-watchdog.timer  opencode.json  openssh-client_1%3a9.6p1-3ubuntu13.18_amd64.deb  openssh-server_1%3a9.6p1-3ubuntu13.18_amd64.deb  openssh-sftp-server_1%3a9.6p1-3ubuntu13.18_amd64.deb  package-lock.json  package.json  (+6 more)
src-tauri/: Cargo.toml  audit.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/msix/: AppxManifest.xml  README.md
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs  native_host.rs
src-tauri/src/daemon/: aria2.rs  curl.rs  curl_capabilities.rs  diagnostics.rs  direct.rs  engine_capabilities.rs  mod.rs  persist.rs  routes.rs  state.rs  static_files.rs  telegram.rs  types.rs  utils.rs  ytdlp.rs
src-tauri/src/daemon/curl/: args.rs  easy_config.rs  mod.rs  multi.rs  task_api.rs  transfer.rs  transfer_config.rs
src-tauri/src/daemon/engine/: adaptive_connections.rs  bandwidth.rs  capability_discovery.rs  checksum.rs  chunk_manager.rs  config.rs  die_orchestrator.rs  dynamic_segments.rs  event_bus.rs  extractor.rs  metadata_cache.rs  mirror.rs  mod.rs  plugin_api.rs  policy_engine.rs  priority_queue.rs  profiles.rs  resource_manager.rs  retry.rs  rules.rs  scheduler.rs  self_healing.rs  thread_pool.rs
src-tauri/src/daemon/engine/adaptive/: buffer_manager.rs  convergence.rs  disk_writer.rs  mod.rs  profile_store.rs  protocol_adapter.rs  (+3 more)
src-tauri/src/daemon/external_tools/: capabilities.rs  discovery.rs  health.rs  installer.rs  mod.rs  process.rs  registry.rs  types.rs
src-tauri/src/daemon/resource_intelligence/: error_intel.rs  http_probe.rs  mod.rs  plan_builder.rs  retry_intel.rs  stability.rs  strategy.rs  types.rs  url_intel.rs
src-tauri/src/daemon/routes/: common.rs  diagnostics.rs  downloads.rs  engine.rs  extension.rs  external_tools.rs  mod.rs  probes.rs
src-tauri/windows/: hooks.nsi  installer-template.nsi
(+960 files in other folders)
