[package]
name = "nova"
version = "0.1.0"
description = "NOVA Download Manager"
authors = ["NOVA"]
license = "MIT"
repository = "https://github.com/nova-download-manager/nova"
edition = "2021"
rust-version = "1.77"

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
